# path-flattener

./: Cargo.toml
.devcontainer/: devcontainer.json
src/: init.rs  main.rs
