[package]
name = "path-flatenner"
version = "0.1.0"
authors = ["Robin Mauritz <robinmauritzrm@gmail.com>"]
edition = "2021"
repository = "https://github.com/RoganMatrivski/path-flattener"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "^4.4", features = ["derive"] }
color-eyre = { version = "0.6.2", features = ["capture-spantrace"] }
tracing = "0.1.37"
tracing-error = "0.2.0"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
walkdir = "2.5.0"

[profile.dev.package.backtrace]
opt-level = 3

[profile.release]
codegen-units = 1
lto = true
panic = "abort"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
